--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ url: "https://hyeongjunyoo.github.io/" # the base hostname & protocol for your s
 
 # User settings
 username: HyeongJunYoo
-user_description: 유저 설명
+user_description: 유형준의 포토폴리오
 user_title: 유저 타이틀
 email: yoojoo97@gmail.com
 # twitter_username: lorem_ipsum
